# casper-delta

./: .cursorignore  .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md  TODO.md  TRADING_COMPETITION.md  ecosystem.config.cjs  justfile  rust-toolchain
casper-delta-cli/: Cargo.toml
casper-delta-cli/src/: cli.rs
casper-delta-cli/src/scenarios/: mod.rs  set_market_config.rs  update_price.rs
casper-delta-collector/: Cargo.toml
casper-delta-collector/src/: main.rs
casper-delta-contracts/: Cargo.toml
casper-delta-contracts/src/: config.rs  events.rs  faucetable_wcspr.rs  lib.rs  market.rs  position_token.rs  roles.rs  system.rs  wrapped_native.rs
casper-delta-contracts/tests/: test_casper_delta.rs
casper-delta-contracts/tests/common/: params.rs  world.rs
casper-delta-contracts/tests/features/: competition.feature  market.feature
casper-delta-contracts/tests/steps/: competition_steps.rs  market_steps.rs  mod.rs
casper-delta-contracts/wasm/: PositionToken.wasm  StyksPriceFeed.wasm  TokenWCSPR.wasm  WrappedNativeToken.wasm
casper-delta-web/: .env.example  README.md  cspr-click.js  ecosystem.config.cjs  index.html  index.ts  package-lock.json  package.json  trading.ts  tsconfig.json
casper-delta-web/src/: config.ts  dom.ts  main.ts  types.ts  vite-env.d.ts
casper-delta-web/src/data/: fetch.ts  state.ts
casper-delta-web/src/trading/: approval.ts  operations.ts  positions.ts
casper-delta-web/src/transactions/: callbacks.ts  handlers.ts  monitor.ts
casper-delta-web/src/ui/: Chart.ts  formatters.ts  loaders.ts  modals.ts  theme.ts  utils.ts
casper-delta-web/src/wallet/: connection.ts
casper_delta_client/: Cargo.toml
casper_delta_client/pkg-web/: casper_delta_wasm_client.d.ts  casper_delta_wasm_client.js  casper_delta_wasm_client_bg.wasm  casper_delta_wasm_client_bg.wasm.d.ts  casper_shorts_wasm_client.d.ts  casper_shorts_wasm_client.js  casper_shorts_wasm_client_bg.wasm  casper_shorts_wasm_client_bg.wasm.d.ts  package.json
casper_delta_client/src/: lib.rs  main.rs
resources/: casper-test-contracts-trade-wcspr.toml  casper-test-contracts.toml  contracts.toml
resources/casper_contract_schemas/: faucetable_wcspr_schema.json  market_schema.json  position_token_schema.json  wrapped_native_token_schema.json
resources/legacy/: faucetable_wcspr_schema.json  market_schema.json  position_token_schema.json  wrapped_native_token_schema.json
wasm/: FaucetableWcspr.wasm  Market.wasm  StyksPriceFeed.wasm  WrappedNativeToken.wasm
whitepaper/: whitepaper.md
