[workspace]
members = ["casper-delta-contracts", "casper-delta-cli", "casper_delta_client"]
exclude = ["casper_delta_client", "casper_delta_example_client"]
resolver = "2"

[workspace.dependencies.cucumber]
version = "0.21.0"
features = []

[workspace.dependencies.odra]
path = "../odra/odra/odra"
features = []

[workspace.dependencies.odra-bdd]
path = "../odra/odra/odra-bdd"
features = []

[workspace.dependencies.odra-build]
path = "../odra/odra/odra-build"
features = []

[workspace.dependencies.odra-cli]
path = "../odra/odra/odra-cli"
features = []

[workspace.dependencies.odra-core]
path = "../odra/odra/core"
features = []

[workspace.dependencies.odra-modules]
path = "../odra/odra/modules"
features = []

[workspace.dependencies.odra-test]
path = "../odra/odra/odra-test"
features = []

[workspace.dependencies.odra-wasm-client]
path = "../odra/odra/odra-wasm-client"
features = []

[workspace.dependencies.odra-wasm-client-builder]
path = "../odra/odra/odra-wasm-client-builder"
features = []

[workspace.dependencies.odra-wcspr]
path = "../odra/odra/odra-wcspr"
features = []

[workspace.dependencies.styks-contracts]
path = "../styks/styks-contracts"
features = []

[workspace.dependencies.styks-core]
path = "../styks/styks-core"
features = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package]

[profile.dev.package."*"]
opt-level = 3
