[package]
name = "casper-delta-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-delta-contracts = { path = "../casper-delta-contracts" }
styks-contracts = { workspace = true }
odra = { workspace = true }
odra-cli = { workspace = true }
ureq = "3.0.12"
serde_json = "1.0.140"

[[bin]]
name = "casper-delta-cli"
path = "src/cli.rs"

